this adds CSRF protection to all fetch requests done by javascript and to all forms that are sent, I have also move the JS files to a dedicated folder for easier navigation into static/js

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -143,5 +143,12 @@
                 });
             });
         </script>
+
+        <meta name="csrf-token" content="{{ csrf_token() }}">
+        <script>
+            // Make CSRF token globally available
+            window.csrfToken = document.querySelector('meta[name="csrf-token"]').content;
+        </script>
+        <script src="{{ url_for('static', filename='js/ajax-utils.js') }}"></script>
     </body>
 </html>
