--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block head_scripts %}
-  <script src="{{ url_for('static', filename='timetable.js') }}"></script>
-  <script src="{{ url_for('static', filename='create.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/timetable.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/create.js') }}"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='timetable.css') }}">
 {% endblock %}
 
