--- a/app/templates/analytics.html
+++ b/app/templates/analytics.html
@@ -2,8 +2,8 @@
 
 {% block head_scripts %}
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="{{ url_for('static', filename='analytics.js') }}"></script>
-  <link rel="stylesheet" href="{{ url_for('static', filename='analytics.css') }}">
+  <script src="{{ url_for('static', filename='js/analytics.js') }}"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename='js/analytics.css') }}">
 {% endblock %}
 
 {% block title %}Analytics{% endblock %}
