--- a/app/templates/assessments.html
+++ b/app/templates/assessments.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='assessment.css') }}">
-    <script src="{{ url_for('static', filename='assessment.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/assessment.js') }}"></script>
 {% endblock %}
 
 {% block content %}
