--- a/app/templates/compare.html
+++ b/app/templates/compare.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block head_scripts %}
-  <script src="{{ url_for('static', filename='timetable.js') }}"></script>
-  <script src="{{ url_for('static', filename='compare.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/timetable.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/compare.js') }}"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='timetable.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='compare.css') }}">
 {% endblock %}
